# rust-nix-shell

./: Cargo.toml  _rust-nix-shell  build.rs  flake.nix  readme.md  result  rust-nix-shell.bash
.circleci/: config.yml
src/: cli.rs  generic-rust.nix  main.rs  rust.nix
