[package]
name = "rust-nix-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
indoc = "1.0.6"
lazy_static = "1.4.0"
regex = "1.5.5"

[build-dependencies]
clap = { version = "3.1.17", features = ["derive"] }
clap_complete = "3.1.4"
regex = "1.5.6"
